proberen overflow op mobile te fixen
onmogelijk

--- a/index.css
+++ b/index.css
@@ -3,14 +3,16 @@
     src: url("../design/NettoOT.otf");
 }
 
-
+html{
+    overflow-x: hidden;
+}
 body{
     /* display:flex; */
     margin: 0;
     padding: 0;
     max-width: 100%;
     font-family: 'NettoOT';
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
     position: relative;
 }
 
